--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Clementina, pasteleria de excelecia en Castelar, oferece los mejores productos de toda zona Oeste">
     <meta name="keywords" content="pasteleria, tortas, dulces, helados, panes"> 
     <meta name="author" content="Ricardo Peroncini">
-    <title>ClementinaT&D Lo mejor del oeste</title>
+    <title>ClementinaT&D</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
