--- a/pages/tortas.html
+++ b/pages/tortas.html
@@ -16,6 +16,7 @@
         <a class="header__imagen-link" href="../index.html">
             <img src="../images/logo.jpg" alt="Logo de la empresa" class="header__imagen-logo">
         </a>
+
         <div class="container topBotomBordersOut">
             <ul class="head-nav-list">
                 <li class="head-nav-item"><a href="../pages/tortas.html">Tortas</a></li>
@@ -29,15 +30,16 @@
         <div class="menu-wrapper">
             <div class="hamburger-menu"></div>	  
         </div>
+
     </header>
 
     <div class="menu-dropdown">
         <ul class="mob-head-nav-list">
-            <li class="mob-head-nav-item"><a href="pages/tortas.html">Tortas</a></li>
-            <li class="mob-head-nav-item"><a href="pages/tartas.html">Tartas</a></li>
-            <li class="mob-head-nav-item"><a href="pages/dulces.html">Dulces</a></li>
-            <li class="mob-head-nav-item"><a href="pages/helados.html">Helados</a></li>
-            <li class="mob-head-nav-item"><a href="pages/nosotros.html">Nosotros</a></li>
+            <li class="mob-head-nav-item"><a href="../pages/tortas.html">Tortas</a></li>
+            <li class="mob-head-nav-item"><a href="../pages/tartas.html">Tartas</a></li>
+            <li class="mob-head-nav-item"><a href="../pages/dulces.html">Dulces</a></li>
+            <li class="mob-head-nav-item"><a href="../pages/helados.html">Helados</a></li>
+            <li class="mob-head-nav-item"><a href="../pages/nosotros.html">Nosotros</a></li>
         </ul>
     </div>
     
@@ -241,6 +243,8 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
+
+        <script src="../js/app.js"></script>
 
 </body>
 
